# playwrightTStoPython

./: .gitignore  Differences.md  Readme.md  conftest.py  pyproject.toml  test_crud_operations.py  test_example.py
ai_powered/: ExecutionPlan.md  Instructions.md  conduit_localhost.yaml  prompt_history
ai_powered/response_schemas/articles/: POST_articles_schema.json  PUT_articles_schema.json
ai_powered/tests/: conftest.py  test_articles.py  test_auth.py  test_tags.py
ai_powered/ui_tests/: UITestsPlan.md  conftest.py  test_conduit_ui.py
ai_powered/ui_tests_mcp/: UITestsPlan.md  conftest.py  test_conduit_mcp.py
ai_powered/utils/: article_generator.py  request_handler.py
request_data/: POST_article.py
response-schemas/tags/: GET_tags_schema.json
response_schemas/articles/: GET_articles_schema.json
response_schemas/tags/: GET_tags_schema.json
tests/: test_crud_operations.py  test_example.py  test_negative.py  test_smoke.py
utils/: apilogger.py  article_generator.py  custom_expect.py  logger.py  request_handler.py  schema_validator.py
