[project]
name = "playwrighttstopython"
version = "0.1.0"
description = "API testing framework migration from TS to Python"
requires-python = ">=3.13"
dependencies = [
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
base_url = ""
addopts = [
    #    "--headed",
    "--browser", "chromium",
#    "--browser", "firefox",
    "--html=report.html", "--self-contained-html"
]